# CppProver

./: CMakeLists.txt  README.md
include/: formula.h  mainException.h  operators.h
src/: formula.cpp  prover.cpp
